<resources>
    <string name="app_name">MyChat</string>
    <string name="action_settings">Settings</string>
    <string name="nothing">nothing</string>
    <string name="yourmessage">your message</string>
    <string name="pseudo">pseudo</string>
    <string name="message">message</string>
    <string name="action_search">search</string>
    <string name="hide">Hide</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="login">Log in</string>
    <string name="password">Password</string>
    <string name="password_entrance">Enter your password</string>
    <string name="username">Username</string>
    <string name="username_entrance">Enter your username</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="connexion_error">connexion error</string>
    <string name="is_incorrect"> %s is incorrect</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="no_connexion">no internet connexion</string>
    <string name="connected_as"> connected as %s</string>
    <string name="credits">Version 1.0\n\nTchat with your friends \n\n\nCopy Right  \u00A9 BURGUBURU Côme &amp; JORNET Benjamin</string>
    <string name="ok">ok</string>
    <string name="contacts">CONTACTS</string>
    <string name="messages">MESSAGES</string>
    <string name="about">ABOUT</string>
    <string name="message_too_large">message to large maybe due to big image</string>
</resources>
